# CPP_MLP

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  main.cpp  test.cc
src/controller/: controller.cc  controller.h
src/model/: col_vector.cc  col_vector.h  data.h  graph_layer.cc  graph_layer.h  graph_network.h  layer.h  matrix.cc  matrix.h  matrix_layer.cc  matrix_layer.h  matrix_network.h  metrics.h  network_service.cc  network_service.h  neural_network.cc  neural_network.h  neuron.cc  neuron.h  timer.h
src/resources/: resource.qrc
src/resources/weigths/: weigths_2_layers.csv  weigths_3_layers.csv  weigths_4_layers.csv  weigths_5_layers.csv
src/view/: graphic.cpp  graphic.h  learning.cpp  learning.h  learning.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  painter.cpp  painter.h  testing.cpp  testing.h  testing.ui  validation.cpp  validation.h  validation.ui
